--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -1626,38 +1626,18 @@ SUPPORT_LIMEWIRE_11=Help support sharing of independent media content.
 # Key/value pairs for the update package, displayed when there is an
 # update of LimeWire available
 ################################################################################
-#### UPDATE_DIALOG_CAPTION=Update LimeWire
+#### UPDATE_DIALOG_CAPTION=New Version Available!
 UPDATE_DIALOG_CAPTION=LimeWire \u306e\u66f4\u65b0
-#### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
-UPDATE_MESSAGE=\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u306e LimeWire \u304c\u691c\u51fa\u3055\u308c\u307e\u3057\u305f\u3002 \u6b21\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u306b\u66f4\u65b0\u3057\u3066\u304f\u3060\u3055\u3044
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 UPDATE_MESSAGE_SMALL=\u6700\u65b0\u306e LimeWire \u306b\u30a2\u30c3\u30d7\u30c7\u30fc\u30c8\u3057\u307e\u3059\u304b\u3002
-#### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_SUCCEEDED_MESSAGE=LimeWire \u306e\u66f4\u65b0\u306f\u7121\u4e8b\u306b\u5b8c\u4e86\u3057\u307e\u3057\u305f\u3002 \u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u4f7f\u7528\u3059\u308b\u306b\u306f LimeWire \u3092\u518d\u8d77\u52d5\u3057\u3066\u4e0b\u3055\u3044\u3002
-#### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
-UPDATE_WEB_PAGE_ERROR_MESSAGE=\u66f4\u65b0\u3092\u5b9f\u65bd\u3059\u308b Web \u30da\u30fc\u30b8\u3092\u958b\u304f\u969b\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002 \u66f4\u65b0\u3092\u5b8c\u4e86\u3059\u308b\u306b\u306f Web \u30d6\u30e9\u30a6\u30b6\u3067 http://www.limewire.com \u306b\u30a2\u30af\u30bb\u30b9\u3057\u3066\u4e0b\u3055\u3044\u3002
-#### UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
-UPDATE_ERROR_MESSAGE_START=LimeWire \u306e\u66f4\u65b0\u4e2d\u306b\u4ee5\u4e0b\u306e\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\uff1a
-#### UPDATE_ERROR_MESSAGE_END=Please e-mail LimeWire support at "support@limewire.com" with this error. You can download the new version of LimeWire from www.limewire.com.
-UPDATE_ERROR_MESSAGE_END=\u3053\u306e\u30a8\u30e9\u30fc\u306e\u5185\u5bb9\u3092 "support@limewire.com" \u306b\u96fb\u5b50\u30e1\u30fc\u30eb\u3067\u9001\u3063\u3066\u4e0b\u3055\u3044\u3002 LimeWire \u306e\u65b0\u3057\u3044\u30d0\u30fc\u30b8\u30e7\u30f3\u306f www.limewire.com \u304b\u3089\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u53ef\u80fd\u3067\u3059\u3002
-#### UPDATE_ERROR_ACCESSING_FILE=Error accessing the necessary files on the server.
-UPDATE_ERROR_ACCESSING_FILE=\u30b5\u30fc\u30d0\u4e0a\u306e\u5fc5\u8981\u306a\u30d5\u30a1\u30a4\u30eb\u3078\u30a2\u30af\u30bb\u30b9\u3057\u305f\u6642\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
-#### UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Error communicating with the server.
-UPDATE_ERROR_COMMUNICATING_WITH_SERVER=\u30b5\u30fc\u30d0\u3068\u306e\u901a\u4fe1\u6642\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
-#### UPDATE_ERROR_LAX_FILE_NOT_FOUND=Error locating your configuration file.
-UPDATE_ERROR_LAX_FILE_NOT_FOUND=\u74b0\u5883\u8a2d\u5b9a\u30d5\u30a1\u30a4\u30eb\u306e\u7279\u5b9a\u6642\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
-#### UPDATE_ERROR_LAX_SECURITY=Error with permissions accessing your file system.
-UPDATE_ERROR_LAX_SECURITY=\u30d5\u30a1\u30a4\u30eb\u30b7\u30b9\u30c6\u30e0\u3078\u30a2\u30af\u30bb\u30b9\u4e2d\u306b\u30a2\u30af\u30bb\u30b9\u6a29\u306e\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
-#### UPDATE_ERROR_LAX_IO=Error accessing your file system.
-UPDATE_ERROR_LAX_IO=\u30d5\u30a1\u30a4\u30eb\u30b7\u30b9\u30c6\u30e0\u306e\u30a2\u30af\u30bb\u30b9\u6642\u306b\u30a8\u30e9\u30fc\u304c\u767a\u751f\u3057\u307e\u3057\u305f\u3002
-#### UPDATE_CANCEL_BUTTON_LABEL=Cancel
-UPDATE_CANCEL_BUTTON_LABEL=\u53d6\u308a\u6d88\u3057
-#### UPDATE_CANCEL_BUTTON_TIP=Cancel the Update
-UPDATE_CANCEL_BUTTON_TIP=\u66f4\u65b0\u3092\u53d6\u308a\u6d88\u3059
-#### UPDATE_NOW_TIP=Update LimeWire Now
-UPDATE_NOW_TIP=\u4eca\u3059\u3050 LimeWire \u3092\u66f4\u65b0\u3059\u308b
-#### UPDATE_LATER_TIP=Update LimeWire Later
-UPDATE_LATER_TIP=\u5f8c\u3067 LimeWire \u3092\u66f4\u65b0\u3059\u308b
+#### UPDATE_TITLE=A new version of LimeWire is available.
+#? UPDATE_TITLE=
+#### UPDATE_LATER_LABEL=Update Later
+#? UPDATE_LATER_LABEL=
+#### UPDATE_NOW_LABEL=Update Now
+#? UPDATE_NOW_LABEL=
+#### UPDATE_TIP=Visit http://www.limewire.com to update!
+#? UPDATE_TIP=
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
