--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -1626,38 +1626,18 @@ SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=\u0141adowanie secure-settings...
 # Key/value pairs for the update package, displayed when there is an
 # update of LimeWire available
 ################################################################################
-#### UPDATE_DIALOG_CAPTION=Update LimeWire
+#### UPDATE_DIALOG_CAPTION=New Version Available!
 UPDATE_DIALOG_CAPTION=Instalowanie poprawek dla LimeWire
-#### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
-#? UPDATE_MESSAGE=
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 #? UPDATE_MESSAGE_SMALL=
-#### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_SUCCEEDED_MESSAGE=Instalacja poprawek dla Twojej kopii LimeWire zako\u0144czy\u0142a si\u0119 pomy\u015blnie. Nowa wersja zacznie dzia\u0142a\u0107 w momencie ponownego uruchomienia programu.
-#### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
-UPDATE_WEB_PAGE_ERROR_MESSAGE=Podczas próby po\u0142\u0105czenia ze stron\u0105 domow\u0105 LimeWire celem pobrania nowszej wersji programu wyst\u0105pi\u0142 b\u0142\u0105d. Instalacj\u0119 poprawki doko\u0144cz poprzez otwarcie w swojej przegl\u0105darce adresu http://www.limewire.com.
-#### UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
-UPDATE_ERROR_MESSAGE_START=Podczas instalowania poprawek dla Twojej kopii LimeWire wyst\u0105pi\u0142 nast\u0119puj\u0105cy b\u0142\u0105d: 
-#### UPDATE_ERROR_MESSAGE_END=Please e-mail LimeWire support at "support@limewire.com" with this error. You can download the new version of LimeWire from www.limewire.com.
-UPDATE_ERROR_MESSAGE_END=Prosimy skontaktowa\u0107 si\u0119 z dzia\u0142em pomocy technicznej LimeWire, i przes\u0142a\u0107 informacj\u0119 o tym b\u0142\u0119dzie na adres "support@limewire.com". W tej sytuacji nowsz\u0105 wersj\u0119 programu mo\u017cesz \u015bci\u0105gn\u0105\u0107 bezpo\u015brednio ze strony http://www.limewire.com.
-#### UPDATE_ERROR_ACCESSING_FILE=Error accessing the necessary files on the server.
-UPDATE_ERROR_ACCESSING_FILE=B\u0142\u0105d podczas próby dost\u0119pu do plików z serwera.
-#### UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Error communicating with the server.
-UPDATE_ERROR_COMMUNICATING_WITH_SERVER=B\u0142\u0105d podczas próby po\u0142\u0105czenia z serwerem.
-#### UPDATE_ERROR_LAX_FILE_NOT_FOUND=Error locating your configuration file.
-UPDATE_ERROR_LAX_FILE_NOT_FOUND=B\u0142\u0105d zwi\u0105zany z prób\u0105 odnalezienia pliku konfiguracyjnego.
-#### UPDATE_ERROR_LAX_SECURITY=Error with permissions accessing your file system.
-UPDATE_ERROR_LAX_SECURITY=B\u0142\u0105d zwi\u0105zany z prawami dost\u0119pu w Twoim systemie plików.
-#### UPDATE_ERROR_LAX_IO=Error accessing your file system.
-UPDATE_ERROR_LAX_IO=B\u0142\u0105d podczas próby dost\u0119pu do Twojego systemu plików.
-#### UPDATE_CANCEL_BUTTON_LABEL=Cancel
-UPDATE_CANCEL_BUTTON_LABEL=Anuluj
-#### UPDATE_CANCEL_BUTTON_TIP=Cancel the Update
-UPDATE_CANCEL_BUTTON_TIP=Anulowanie instalacji poprawek.
-#### UPDATE_NOW_TIP=Update LimeWire Now
-UPDATE_NOW_TIP=Zainstaluj poprawki do LimeWire
-#### UPDATE_LATER_TIP=Update LimeWire Later
-UPDATE_LATER_TIP=Zainstaluj poprawki do LimeWire pó\u017aniej.
+#### UPDATE_TITLE=A new version of LimeWire is available.
+#? UPDATE_TITLE=
+#### UPDATE_LATER_LABEL=Update Later
+#? UPDATE_LATER_LABEL=
+#### UPDATE_NOW_LABEL=Update Now
+#? UPDATE_NOW_LABEL=
+#### UPDATE_TIP=Visit http://www.limewire.com to update!
+#? UPDATE_TIP=
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
