--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -1626,38 +1626,18 @@ SUPPORT_LIMEWIRE_11=\u0633\u0627\u0639\u062f \u0639\u0644\u0649 \u062f\u0639\u06
 # Key/value pairs for the update package, displayed when there is an
 # update of LimeWire available
 ################################################################################
-#### UPDATE_DIALOG_CAPTION=Update LimeWire
+#### UPDATE_DIALOG_CAPTION=New Version Available!
 UPDATE_DIALOG_CAPTION=\u062a\u062d\u062f\u064a\u062b LimeWire
-#### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
-UPDATE_MESSAGE=\u062a\u0645 \u0627\u0644\u0639\u062b\u0648\u0631 \u0639\u0644\u0649 \u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b \u0645\u0646 LimeWire \u0639\u0644\u0649 \u0627\u0644\u0634\u0628\u0643\u0629. \u0645\u0646 \u0641\u0636\u0644\u0643 \u0642\u0645 \u0628\u0627\u0644\u062a\u062d\u062f\u064a\u062b.
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 UPDATE_MESSAGE_SMALL=\u064a\u0648\u062c\u062f \u0646\u0633\u062e\u0629 \u0623\u062d\u062f\u062b. \u0647\u0644 \u062a\u0631\u063a\u0628 \u0641\u064a \u0627\u0644\u062a\u062d\u062f\u064a\u062b\u061f
-#### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_SUCCEEDED_MESSAGE=\u062a\u0645 \u0625\u062a\u0645\u0627\u0645 \u062a\u062d\u062f\u064a\u062b LimeWire \u0628\u0646\u062c\u0627\u062d. \u0645\u0646 \u0641\u0636\u0644\u0643 \u0642\u0645 \u0628\u0625\u0639\u0627\u062f\u0629 \u062a\u0634\u063a\u064a\u0644 LimeWire \u0644\u062a\u0633\u062a\u062e\u062f\u0645 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u062c\u062f\u064a\u062f\u0629.
-#### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
-UPDATE_WEB_PAGE_ERROR_MESSAGE=\u062d\u062f\u062b \u062e\u0637\u0623 \u0623\u062b\u0646\u0627\u0621 \u0641\u062a\u062d \u0635\u0641\u062d\u0629 LimeWire \u0639\u0644\u0649 \u0627\u0644\u0648\u064a\u0628 \u0644\u0625\u062c\u0631\u0627\u0621 \u0627\u0644\u062a\u062d\u062f\u064a\u062b. \u0644\u0625\u0643\u0645\u0627\u0644 \u0627\u0644\u062a\u062d\u062f\u064a\u062b \u0627\u062f\u062e\u0644 \u0639\u0644\u0649: http://www.limewire.com.
-#### UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
-UPDATE_ERROR_MESSAGE_START=\u0635\u0627\u062f\u0641 \u062a\u062d\u062f\u064a\u062b LimeWire \u0627\u0644\u062e\u0637\u0623 \u0627\u0644\u062a\u0627\u0644\u064a:
-#### UPDATE_ERROR_MESSAGE_END=Please e-mail LimeWire support at "support@limewire.com" with this error. You can download the new version of LimeWire from www.limewire.com.
-UPDATE_ERROR_MESSAGE_END=\u0645\u0646 \u0641\u0636\u0644\u0643 \u0642\u0645 \u0628\u0625\u0631\u0633\u0627\u0644 \u062a\u0642\u0631\u064a\u0631 \u0628\u0627\u0644\u062e\u0637\u0623 \u0625\u0644\u0649: "support@limewire.org". \u064a\u0645\u0643\u0646\u0643 \u062a\u0646\u0632\u064a\u0644 \u0627\u0644\u0646\u0633\u062e\u0629 \u0627\u0644\u062d\u062f\u064a\u062b\u0629 \u0645\u0646 LimeWire \u0645\u0646 www.limewire.org.
-#### UPDATE_ERROR_ACCESSING_FILE=Error accessing the necessary files on the server.
-UPDATE_ERROR_ACCESSING_FILE=\u062e\u0637\u0623 \u0641\u064a \u0627\u0644\u0648\u0635\u0648\u0644 \u0644\u0644\u0645\u0644\u0641\u0627\u062a \u0627\u0644\u0636\u0631\u0648\u0631\u064a\u0629 \u0639\u0644\u0649 \u0627\u0644\u0645\u0644\u0642\u0645.
-#### UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Error communicating with the server.
-UPDATE_ERROR_COMMUNICATING_WITH_SERVER=\u062e\u0637\u0623 \u0641\u064a \u0627\u0644\u0627\u062a\u0635\u0627\u0644 \u0628\u0627\u0644\u0645\u0644\u0642\u0645.
-#### UPDATE_ERROR_LAX_FILE_NOT_FOUND=Error locating your configuration file.
-UPDATE_ERROR_LAX_FILE_NOT_FOUND=\u062e\u0637\u0623 \u0641\u064a \u062a\u062d\u062f\u064a\u062f \u0645\u0644\u0641 \u0627\u0644\u0625\u062c\u0631\u0627\u0621\u0627\u062a \u0627\u0644\u062e\u0627\u0635 \u0628\u0643.
-#### UPDATE_ERROR_LAX_SECURITY=Error with permissions accessing your file system.
-UPDATE_ERROR_LAX_SECURITY=\u062e\u0637\u0623 \u0641\u064a \u0627\u0644\u0648\u0635\u0648\u0644 \u0644\u0645\u0644\u0641 \u0627\u0644\u0646\u0638\u0627\u0645 \u0627\u0644\u062e\u0627\u0635 \u0628\u0643.
-#### UPDATE_ERROR_LAX_IO=Error accessing your file system.
-UPDATE_ERROR_LAX_IO=\u062e\u0637\u0623 \u0641\u064a \u0627\u0644\u0648\u0635\u0648\u0644 \u0644\u0645\u0644\u0641 \u0627\u0644\u0646\u0638\u0627\u0645.
-#### UPDATE_CANCEL_BUTTON_LABEL=Cancel
-UPDATE_CANCEL_BUTTON_LABEL=\u0625\u0644\u063a\u0627\u0621 \u0627\u0644\u0623\u0645\u0631
-#### UPDATE_CANCEL_BUTTON_TIP=Cancel the Update
-UPDATE_CANCEL_BUTTON_TIP=\u0625\u0644\u063a\u0627\u0621 \u0627\u0644\u062a\u062d\u062f\u064a\u062b.
-#### UPDATE_NOW_TIP=Update LimeWire Now
-UPDATE_NOW_TIP=\u062a\u062d\u062f\u064a\u062b LimeWire \u0627\u0644\u0622\u0646.
-#### UPDATE_LATER_TIP=Update LimeWire Later
-UPDATE_LATER_TIP=\u062a\u062d\u062f\u064a\u062b LimeWire \u0644\u0627\u062d\u0642\u0627.
+#### UPDATE_TITLE=A new version of LimeWire is available.
+#? UPDATE_TITLE=
+#### UPDATE_LATER_LABEL=Update Later
+#? UPDATE_LATER_LABEL=
+#### UPDATE_NOW_LABEL=Update Now
+#? UPDATE_NOW_LABEL=
+#### UPDATE_TIP=Visit http://www.limewire.com to update!
+#? UPDATE_TIP=
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
