--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -1626,38 +1626,18 @@ SUPPORT_LIMEWIRE_11=Auta vapaan mediasisällön jakoa.
 # Key/value pairs for the update package, displayed when there is an
 # update of LimeWire available
 ################################################################################
-#### UPDATE_DIALOG_CAPTION=Update LimeWire
+#### UPDATE_DIALOG_CAPTION=New Version Available!
 UPDATE_DIALOG_CAPTION=Päivitä LimeWire
-#### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
-UPDATE_MESSAGE=Verkossa on saatavilla uudempi versio LimeWirestä. Ole hyvä ja päivitä
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 UPDATE_MESSAGE_SMALL=Uudempi versio on saatavilla. Päivitä?
-#### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_SUCCEEDED_MESSAGE=LimeWiresi on päivitetty onnistuneesti. Ole hyvä ja käynnistä LimeWire uudestaan ottaksesi uuden version käyttöön..
-#### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
-UPDATE_WEB_PAGE_ERROR_MESSAGE=Tapahtui virhe avatessa LimeWiren päivitys web-sivua. Päivittääksesi avaa selaimesi ja siirry sivulle http://www.limewire.com.
-#### UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
-UPDATE_ERROR_MESSAGE_START=LimeWire päivityksen kohdalla tapahtui seuraavat virheet:
-#### UPDATE_ERROR_MESSAGE_END=Please e-mail LimeWire support at "support@limewire.com" with this error. You can download the new version of LimeWire from www.limewire.com.
-UPDATE_ERROR_MESSAGE_END=Ole hyvä ja lähetä virheilmoitus osoitteeseen "support@limewire.com". Voit ladata uuden version osoitteesta www.limewire.com.
-#### UPDATE_ERROR_ACCESSING_FILE=Error accessing the necessary files on the server.
-UPDATE_ERROR_ACCESSING_FILE=Virhe ottaessa yhteyttä vaadittaviin tiedostoihin serverillä.
-#### UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Error communicating with the server.
-UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Virhe kommunikoinnissa serverin kanssa.
-#### UPDATE_ERROR_LAX_FILE_NOT_FOUND=Error locating your configuration file.
-UPDATE_ERROR_LAX_FILE_NOT_FOUND=Virhe etsittäessä asetustiedostoa koneeltasi.
-#### UPDATE_ERROR_LAX_SECURITY=Error with permissions accessing your file system.
-UPDATE_ERROR_LAX_SECURITY=Virhe käyttöoikeuksissa ottaessa yhteys hakemistoihisi.
-#### UPDATE_ERROR_LAX_IO=Error accessing your file system.
-UPDATE_ERROR_LAX_IO=Virhe ottaessa yhteys tiedostorakenteesisi
-#### UPDATE_CANCEL_BUTTON_LABEL=Cancel
-UPDATE_CANCEL_BUTTON_LABEL=Keskeytä
-#### UPDATE_CANCEL_BUTTON_TIP=Cancel the Update
-UPDATE_CANCEL_BUTTON_TIP=Keskeytä päivitys.
-#### UPDATE_NOW_TIP=Update LimeWire Now
-UPDATE_NOW_TIP=Päivitä LimeWire nyt.
-#### UPDATE_LATER_TIP=Update LimeWire Later
-UPDATE_LATER_TIP=Päivitä LimeWire myöhemmin.
+#### UPDATE_TITLE=A new version of LimeWire is available.
+#? UPDATE_TITLE=
+#### UPDATE_LATER_LABEL=Update Later
+#? UPDATE_LATER_LABEL=
+#### UPDATE_NOW_LABEL=Update Now
+#? UPDATE_NOW_LABEL=
+#### UPDATE_TIP=Visit http://www.limewire.com to update!
+#? UPDATE_TIP=
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
