--- a/lib/messagebundles/MessagesBundle_sl.properties
+++ b/lib/messagebundles/MessagesBundle_sl.properties
@@ -1626,38 +1626,18 @@ SUPPORT_LIMEWIRE_11=Pomagajte podpirati deljenju neodvisnih multimedijskih vsebi
 # Key/value pairs for the update package, displayed when there is an
 # update of LimeWire available
 ################################################################################
-#### UPDATE_DIALOG_CAPTION=Update LimeWire
+#### UPDATE_DIALOG_CAPTION=New Version Available!
 UPDATE_DIALOG_CAPTION=Posodobitev LimeWire
-#### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
-UPDATE_MESSAGE=Obstaja novej\u0161a razli\u010dica programa LimeWire. Prosimo, nadgradite v razli\u010dico
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 #? UPDATE_MESSAGE_SMALL=
-#### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_SUCCEEDED_MESSAGE=Posodobitev programa LimeWire se je uspe\u0161no zaklju\u010dila. Prosim, ponovno za\u017eenite program, da boste uporabljali novo razli\u010dico.
-#### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
-UPDATE_WEB_PAGE_ERROR_MESSAGE=Pri\u0161lo je do napake pri odpiranju spletne strani LimeWire za posodobitev. \u010ce \u017eelite dokon\u010dati posodobitev, usmerite va\u0161 spletni brskalnik na naslov http://www.limewire.com/.
-#### UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
-UPDATE_ERROR_MESSAGE_START=Pri posodobitvi programa LimeWire se je pripetila slede\u010da napaka:
-#### UPDATE_ERROR_MESSAGE_END=Please e-mail LimeWire support at "support@limewire.com" with this error. You can download the new version of LimeWire from www.limewire.com.
-UPDATE_ERROR_MESSAGE_END=Prosimo, po\u0161ljite e-po\u0161tno sporo\u010dilo na naslov "support@limewire.com" s podatki o tej napaki. Novo razli\u010dico programa pa lahko nalo\u017eite iz naslova http://www.limewire.com/.
-#### UPDATE_ERROR_ACCESSING_FILE=Error accessing the necessary files on the server.
-UPDATE_ERROR_ACCESSING_FILE=Napaka pri dostopu do potrebnih datotek na stre\u017eniku.
-#### UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Error communicating with the server.
-UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Napaka pri sporazumevanju s stre\u017enikom.
-#### UPDATE_ERROR_LAX_FILE_NOT_FOUND=Error locating your configuration file.
-UPDATE_ERROR_LAX_FILE_NOT_FOUND=Napaka pri dolo\u010devanju va\u0161e konfiguracijske datoteke.
-#### UPDATE_ERROR_LAX_SECURITY=Error with permissions accessing your file system.
-UPDATE_ERROR_LAX_SECURITY=Napaka z dovoljenji pri dostopanju datote\u010dnega sistema.
-#### UPDATE_ERROR_LAX_IO=Error accessing your file system.
-UPDATE_ERROR_LAX_IO=Napaka pri dostopanju va\u0161ega datote\u010dnega sistema.
-#### UPDATE_CANCEL_BUTTON_LABEL=Cancel
-UPDATE_CANCEL_BUTTON_LABEL=Prekli\u010di
-#### UPDATE_CANCEL_BUTTON_TIP=Cancel the Update
-UPDATE_CANCEL_BUTTON_TIP=Prekli\u010de posodobitev.
-#### UPDATE_NOW_TIP=Update LimeWire Now
-UPDATE_NOW_TIP=Posodobi LimeWire sedaj.
-#### UPDATE_LATER_TIP=Update LimeWire Later
-UPDATE_LATER_TIP=Posodobi LimeWire kasneje.
+#### UPDATE_TITLE=A new version of LimeWire is available.
+#? UPDATE_TITLE=
+#### UPDATE_LATER_LABEL=Update Later
+#? UPDATE_LATER_LABEL=
+#### UPDATE_NOW_LABEL=Update Now
+#? UPDATE_NOW_LABEL=
+#### UPDATE_TIP=Visit http://www.limewire.com to update!
+#? UPDATE_TIP=
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
