--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -1626,38 +1626,18 @@ SUPPORT_LIMEWIRE_11=Ba\u011f\u0131ms\u0131z ortam içeri\u011finin payla\u015f\u0
 # Key/value pairs for the update package, displayed when there is an
 # update of LimeWire available
 ################################################################################
-#### UPDATE_DIALOG_CAPTION=Update LimeWire
+#### UPDATE_DIALOG_CAPTION=New Version Available!
 UPDATE_DIALOG_CAPTION=LimeWire'\u0131 güncelle
-#### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
-UPDATE_MESSAGE=A\u011fda daha yeni bir LimeWire sürümü saptand\u0131. Lütfen \u015fu sürüme güncelleyiniz:
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 #? UPDATE_MESSAGE_SMALL=
-#### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_SUCCEEDED_MESSAGE=LimeWire güncellemeniz ba\u015far\u0131yla tamamland\u0131. Yeni sürümünüzü kullanmak için lütfen LimeWire'\u0131 yeniden ba\u015flat\u0131n.
-#### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
-UPDATE_WEB_PAGE_ERROR_MESSAGE=Güncelleme için LimeWire web sayfas\u0131n\u0131n aç\u0131lmas\u0131nda bir hata olu\u015ftu. Güncellemeyi tamamlamak için lütfen internet taray\u0131c\u0131n\u0131zla http://www.limewire.com adresini aç\u0131n\u0131z.
-#### UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
-UPDATE_ERROR_MESSAGE_START=LimeWire güncellemenizde a\u015fa\u011f\u0131daki hatayla kar\u015f\u0131la\u015f\u0131ld\u0131:
-#### UPDATE_ERROR_MESSAGE_END=Please e-mail LimeWire support at "support@limewire.com" with this error. You can download the new version of LimeWire from www.limewire.com.
-UPDATE_ERROR_MESSAGE_END=Lütfen "support@limewire.com"'daki LimeWire deste\u011fe bu hatay\u0131 bildiren e-posta gönderiniz. LimeWire'\u0131n yeni sürümünü www.limewire.com'dan indirebilirsiniz.
-#### UPDATE_ERROR_ACCESSING_FILE=Error accessing the necessary files on the server.
-UPDATE_ERROR_ACCESSING_FILE=Sunucudaki zorunlu dosyalara eri\u015fimde hata.
-#### UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Error communicating with the server.
-UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Sunucuyla ileti\u015fimde hata.
-#### UPDATE_ERROR_LAX_FILE_NOT_FOUND=Error locating your configuration file.
-UPDATE_ERROR_LAX_FILE_NOT_FOUND=Yap\u0131land\u0131rma dosyan\u0131z\u0131 konumland\u0131rmada hata.
-#### UPDATE_ERROR_LAX_SECURITY=Error with permissions accessing your file system.
-UPDATE_ERROR_LAX_SECURITY=Dosya sisteminize eri\u015fim izinlerinde hata.
-#### UPDATE_ERROR_LAX_IO=Error accessing your file system.
-UPDATE_ERROR_LAX_IO=Dosya sisteminize eri\u015fimde hata.
-#### UPDATE_CANCEL_BUTTON_LABEL=Cancel
-UPDATE_CANCEL_BUTTON_LABEL=\u0130ptal
-#### UPDATE_CANCEL_BUTTON_TIP=Cancel the Update
-UPDATE_CANCEL_BUTTON_TIP=Güncellemeyi iptal eder.
-#### UPDATE_NOW_TIP=Update LimeWire Now
-UPDATE_NOW_TIP=LimeWire'\u0131 \u015eimdi günceller.
-#### UPDATE_LATER_TIP=Update LimeWire Later
-UPDATE_LATER_TIP=LimeWire'\u0131 daha sonra günceller.
+#### UPDATE_TITLE=A new version of LimeWire is available.
+#? UPDATE_TITLE=
+#### UPDATE_LATER_LABEL=Update Later
+#? UPDATE_LATER_LABEL=
+#### UPDATE_NOW_LABEL=Update Now
+#? UPDATE_NOW_LABEL=
+#### UPDATE_TIP=Visit http://www.limewire.com to update!
+#? UPDATE_TIP=
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
