--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -1626,38 +1626,18 @@ SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=\u52a0\u8f7d secure settings...
 # Key/value pairs for the update package, displayed when there is an
 # update of LimeWire available
 ################################################################################
-#### UPDATE_DIALOG_CAPTION=Update LimeWire
+#### UPDATE_DIALOG_CAPTION=New Version Available!
 UPDATE_DIALOG_CAPTION=\u5347\u7ea7 LimeWire
-#### UPDATE_MESSAGE=A newer version of LimeWire was detected on the network. Please update to version
-#? UPDATE_MESSAGE=
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 #? UPDATE_MESSAGE_SMALL=
-#### UPDATE_SUCCEEDED_MESSAGE=Your LimeWire update has successfully completed. Please restart LimeWire to use your new version.
-UPDATE_SUCCEEDED_MESSAGE=LimeWire \u5347\u7ea7 \u5b8c\u6210. \u8bf7\u91cd\u542f LimeWire, \u4f7f\u7528 \u65b0\u7684 \u7248\u672c.
-#### UPDATE_WEB_PAGE_ERROR_MESSAGE=There was an error opening the LimeWire web page for performing the update. To complete your update, please open your browser to http://www.limewire.com.
-UPDATE_WEB_PAGE_ERROR_MESSAGE=\u6253\u5f00 LimeWire \u4e3b\u9875, \u6267\u884c \u5347\u7ea7 \u65f6\u51fa\u73b0\u9519\u8bef. \u8981\u5b8c\u6210\u5347\u7ea7, \u8bf7\u6253\u5f00 \u4f60\u7684 \u6d4f\u89c8\u5668 \u6d4f\u89c8 http://www.limewire.com.
-#### UPDATE_ERROR_MESSAGE_START=Your LimeWire update has encountered the following error:
-UPDATE_ERROR_MESSAGE_START=\u4f60\u7684 LimeWire \u5347\u7ea7\u4e2d \u9047\u5230 \u4e0b\u5217 \u9519\u8bef:
-#### UPDATE_ERROR_MESSAGE_END=Please e-mail LimeWire support at "support@limewire.com" with this error. You can download the new version of LimeWire from www.limewire.com.
-UPDATE_ERROR_MESSAGE_END=\u8bf7\u628a \u8fd9\u4e2a\u9519\u8bef mail \u7ed9 LimeWire \u7684 \u6280\u672f\u652f\u6301 \u201csupport@limewire.com\u201d. \u4f60 \u53ef\u4ee5 \u4ece www.limewire.com \u4e0b\u5728 \u65b0\u7684 \u7248\u672c.
-#### UPDATE_ERROR_ACCESSING_FILE=Error accessing the necessary files on the server.
-UPDATE_ERROR_ACCESSING_FILE=\u5728\u670d\u52a1\u5668 \u4e0a\u5b58\u53d6\u5fc5\u987b\u7684 \u6587\u4ef6 \u51fa\u9519.
-#### UPDATE_ERROR_COMMUNICATING_WITH_SERVER=Error communicating with the server.
-UPDATE_ERROR_COMMUNICATING_WITH_SERVER=\u670d\u52a1\u5668 \u901a\u4fe1 \u51fa\u9519.
-#### UPDATE_ERROR_LAX_FILE_NOT_FOUND=Error locating your configuration file.
-UPDATE_ERROR_LAX_FILE_NOT_FOUND=\u5b9a\u4f4d \u4f60\u7684 \u914d\u7f6e \u6587\u4ef6 \u51fa\u9519.
-#### UPDATE_ERROR_LAX_SECURITY=Error with permissions accessing your file system.
-UPDATE_ERROR_LAX_SECURITY=\u5b58\u53d6 \u4f60\u7684 \u6587\u4ef6 \u7cfb\u7edf\u7684 \u6743\u9650\u9519\u8bef.
-#### UPDATE_ERROR_LAX_IO=Error accessing your file system.
-UPDATE_ERROR_LAX_IO=\u5b58\u53d6 \u4f60\u7684 \u6587\u4ef6 \u7cfb \u7edf\u9519\u8bef.
-#### UPDATE_CANCEL_BUTTON_LABEL=Cancel
-UPDATE_CANCEL_BUTTON_LABEL=\u53d6\u6d88
-#### UPDATE_CANCEL_BUTTON_TIP=Cancel the Update
-UPDATE_CANCEL_BUTTON_TIP=\u53d6\u6d88 \u5347\u7ea7.
-#### UPDATE_NOW_TIP=Update LimeWire Now
-UPDATE_NOW_TIP=\u73b0\u5728\u5c31 \u5347\u7ea7 LimeWire
-#### UPDATE_LATER_TIP=Update LimeWire Later
-UPDATE_LATER_TIP=\u4ee5\u540e\u518d \u5347\u7ea7 LimeWire.
+#### UPDATE_TITLE=A new version of LimeWire is available.
+#? UPDATE_TITLE=
+#### UPDATE_LATER_LABEL=Update Later
+#? UPDATE_LATER_LABEL=
+#### UPDATE_NOW_LABEL=Update Now
+#? UPDATE_NOW_LABEL=
+#### UPDATE_TIP=Visit http://www.limewire.com to update!
+#? UPDATE_TIP=
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
