--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.4.4
+# Messages Bundle for LimeWire 4.8.1
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -1631,13 +1631,13 @@ UPDATE_DIALOG_CAPTION=Mise à jour de LimeWire
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 UPDATE_MESSAGE_SMALL=Une nouvelle version est disponible, mettre à jour\u00a0?
 #### UPDATE_TITLE=A new version of LimeWire is available.
-#? UPDATE_TITLE=
+UPDATE_TITLE=Une nouvelle version de Limewire est disponible.
 #### UPDATE_LATER_LABEL=Update Later
-#? UPDATE_LATER_LABEL=
+UPDATE_LATER_LABEL=Mettre à jour plus tard
 #### UPDATE_NOW_LABEL=Update Now
-#? UPDATE_NOW_LABEL=
+UPDATE_NOW_LABEL=Mettre à jour maintenant
 #### UPDATE_TIP=Visit http://www.limewire.com to update!
-#? UPDATE_TIP=
+UPDATE_TIP=Visitez http://www.limewire.com pour mettre à jour\u00a0!
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
