--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1631,13 +1631,13 @@ UPDATE_DIALOG_CAPTION=Actualice LimeWire
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 UPDATE_MESSAGE_SMALL=Está disponible una nueva versión. ¿Desea actualizarla?
 #### UPDATE_TITLE=A new version of LimeWire is available.
-#? UPDATE_TITLE=
+UPDATE_TITLE=Está disponible una nueva versión de Limewire.
 #### UPDATE_LATER_LABEL=Update Later
-#? UPDATE_LATER_LABEL=
+UPDATE_LATER_LABEL=Actualizar más tarde
 #### UPDATE_NOW_LABEL=Update Now
-#? UPDATE_NOW_LABEL=
+UPDATE_NOW_LABEL=Actualizar ahora
 #### UPDATE_TIP=Visit http://www.limewire.com to update!
-#? UPDATE_TIP=
+UPDATE_TIP=Puede obtengar LimeWire actualizacion en http://www.limewire.com!
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
