--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.4.5
+# Messages Bundle for LimeWire 4.8.1
 # Specialization for: Dutch - Netherlands, Belgium
 # Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf, Jan Willem Lageman
 ################################################################################
@@ -1627,17 +1627,17 @@ SUPPORT_LIMEWIRE_11=Steun de hulp met het delen van onafhankelijke media inhoud.
 # update of LimeWire available
 ################################################################################
 #### UPDATE_DIALOG_CAPTION=New Version Available!
-UPDATE_DIALOG_CAPTION=Vernieuw LimeWire
+UPDATE_DIALOG_CAPTION=Nieuw versie beshikbaar!
 #### UPDATE_MESSAGE_SMALL=A newer version is available, update?
 UPDATE_MESSAGE_SMALL=Een nieuwere versie is beschikbaar, updaten?
 #### UPDATE_TITLE=A new version of LimeWire is available.
-#? UPDATE_TITLE=
+UPDATE_TITLE=Een nieuwere versie van LimeWire is beschikbaar.
 #### UPDATE_LATER_LABEL=Update Later
-#? UPDATE_LATER_LABEL=
+UPDATE_LATER_LABEL=Updaten later
 #### UPDATE_NOW_LABEL=Update Now
-#? UPDATE_NOW_LABEL=
+UPDATE_NOW_LABEL=Updaten nu
 #### UPDATE_TIP=Visit http://www.limewire.com to update!
-#? UPDATE_TIP=
+UPDATE_TIP=Download update op http://www.limewire.com!
 
 ################################################################################
 # Key/Value pairs for other messages displayed to the user
