--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.1
+# Messages Bundle for LimeWire 4.8.2
 # Specialization for: Spanish (Castillian) - Spain
 # Thanks to: Thinkdiff. Localization English->Spanish by Ability Top Translations www.localization-translation.com
 ################################################################################
@@ -906,7 +906,7 @@ DOWNLOAD_STATUS_ABORTED=Suspendido
 #### DOWNLOAD_STATUS_FAILED=Awaiting Sources
 DOWNLOAD_STATUS_FAILED=Fuentes en espera
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
-DOWNLOAD_STATUS_DOWNLOADING=Descangando desde
+DOWNLOAD_STATUS_DOWNLOADING=Descargando desde
 #### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=No se pudo mover a la librería
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
@@ -2116,7 +2116,7 @@ OPTIONS_DOWNLOAD_CLEAR_CHECK_BOX_LABEL=Eliminar automáticamente las descargas co
 # to downloads in the options window
 ################################################################################
 #### OPTIONS_DOWNLOAD_BANDWIDTH_TITLE=Download Bandwidth
-OPTIONS_DOWNLOAD_BANDWIDTH_TITLE=Descargar ancho de banda
+OPTIONS_DOWNLOAD_BANDWIDTH_TITLE=Ancho de banda de descarga
 #### OPTIONS_DOWNLOAD_BANDWIDTH_LABEL=You can set the percentage of your bandwidth devoted to downloads.
 OPTIONS_DOWNLOAD_BANDWIDTH_LABEL=Puede establecer el porcentaje de su ancho de banda destinado a las descargas.
 #### OPTIONS_DOWNLOAD_BANDWIDTH_SLIDER_MAX_LABEL=Unlimited
@@ -2140,7 +2140,7 @@ OPTIONS_UPLOAD_CLEAR_CHECK_BOX_LABEL=Eliminar automáticamente las cargas complet
 # to uploads in the options window
 ################################################################################
 #### OPTIONS_UPLOAD_BANDWIDTH_TITLE=Upload Bandwidth
-OPTIONS_UPLOAD_BANDWIDTH_TITLE=Cargar ancho de banda
+OPTIONS_UPLOAD_BANDWIDTH_TITLE=Ancho de banda de carga
 #### OPTIONS_UPLOAD_BANDWIDTH_LABEL=You can set the percentage of your bandwidth devoted to uploads. To turn off uploads, reduce your upload slots to zero.
 OPTIONS_UPLOAD_BANDWIDTH_LABEL=Puede establecer el porcentaje de su ancho de banda destinado a las cargas. Para desactivar las cargas, reduzca las ranuras de carga a cero.
 #### OPTIONS_UPLOAD_BANDWIDTH_SLIDER_MAX_LABEL=Unlimited
@@ -3950,7 +3950,7 @@ UP_INCOMING_ACCEPT_UP=Aceptación entrante (Ultrapar)
 #### UP_INCOMING_REJECT_NO_ROOM_LEAF=In Rej. (All Slots Taken)
 UP_INCOMING_REJECT_NO_ROOM_LEAF=Rechazo entrante (Todas las ranuras tomadas)
 #### UP_INCOMING_REJECT_NO_ROOM_UP=In Rej. (Network Needs Ultrapeer)
-UP_INCOMING_REJECT_NO_ROOM_UP=Rechazo entrante (Red necesitas ultrapares)
+UP_INCOMING_REJECT_NO_ROOM_UP=Rechazo entrante (La red necesita ultrapares)
 #### OUTGOING_BAD_CONNECT=Bad Connect
 OUTGOING_BAD_CONNECT=Mala conexión
 #### OUTGOING_SERVER_REJECT=Server Reject
@@ -3976,7 +3976,7 @@ SUCCESSFUL_INCOMING=Exitoso
 #### INCOMING_NO_CONCLUSION=No Conclusion
 INCOMING_NO_CONCLUSION=Sin conclusión
 #### CRAWLER_CONNECTION=Crawler
-CRAWLER_CONNECTION=Reastreador
+CRAWLER_CONNECTION=Rastreador
 #### OUTGOING_LIMEWIRE_ULTRAPEER_REJECT=LimeWire Ultrapeers
 OUTGOING_LIMEWIRE_ULTRAPEER_REJECT=Ultrapares de LimeWire
 #### OUTGOING_LIMEWIRE_LEAF_REJECT=LimeWire Leaves
@@ -3992,7 +3992,7 @@ ALL_OOB_REQUESTS=Pedidos de respuesta
 #### ALL_OOB_RESPONSES=Responses Received
 ALL_OOB_RESPONSES=Respuestas recibidas
 #### ALL_OOB_BYPASSED=Responses Bypassed
-ALL_OOB_BYPASSED=Respustas derivadas
+ALL_OOB_BYPASSED=Respuestas derivadas
 #### STATS_OOB_THROUGHPUT_TITLE=OOB Success Rate
 STATS_OOB_THROUGHPUT_TITLE=Tasa de éxito OOB
 #### STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
