--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.1
+# Messages Bundle for LimeWire 4.8.2
 # Specialization for: Dutch - Netherlands, Belgium
 # Thanks to: Willem Broekema, Edwin van Ouwerkerk Moria, Reinier Bergwerf, Jan Willem Lageman
 ################################################################################
@@ -868,7 +868,7 @@ STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire start van uit standby.
 #### DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Kill Download
 DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Stop download
 #### DOWNLOAD_POPUP_MENU_RESUME=Force Resume
-DOWNLOAD_POPUP_MENU_RESUME=Forceer download
+DOWNLOAD_POPUP_MENU_RESUME=Download forceren
 #### DOWNLOAD_POPUP_MENU_LAUNCH=Preview File
 DOWNLOAD_POPUP_MENU_LAUNCH=Speel af
 #### DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
