and new message.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -851,6 +851,7 @@ GENERAL_CHAT_BUTTON_LABEL=Chat...
 GENERAL_CHAT_BUTTON_TIP=Chat with Host
 GENERAL_LAUNCH_BUTTON_LABEL=Launch
 GENERAL_LAUNCH_BUTTON_TIP=Launch File
+GENERAL_CLEAR_HISTORY=Clear History
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
